--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^22.10.1",
     "axios": "^1.7.9",
+    "clipboard-copy": "^4.0.1",
     "mobx": "^6.13.5",
     "mobx-persist-store": "^1.1.5",
     "mobx-react-lite": "^4.0.7",
